--- a/our_labs/lab_01_segmentation.ipynb
+++ b/our_labs/lab_01_segmentation.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# [IAPR 2020:][iapr2020] Lab 1 ‒  Image segmentation\n",
     "\n",
-    "**Author:** Catinca Mujdei\n",
+    "**Author:** Catinca Mujdei, Erick Maraz\n",
     "**Due date:** 26.03.2020\n",
     "\n",
-    "[iapr2018]: https://github.com/LTS5/iapr-2020"
+    "[iapr2020]: https://github.com/LTS5/iapr-2020"
    ]
   },
   {
@@ -487,7 +487,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -552,7 +554,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This approach turned out to work best when the number of clusters is 4."
+    "This approach turned out to work best when the number of clusters is 4.\n",
+    "\n",
+    "K-means clustering is probably the bet approach since it captures the most important features of the brain region and in fact it can be seen that the edge of the borders are pretty well defined. Much better that the previous methods.\n"
    ]
   },
   {
