Outputting the video with robot path and formula

--- a/our_project/window_sliding.ipynb
+++ b/our_project/window_sliding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2 as cv\n",
     "\n",
     "cap = cv.VideoCapture('../data/robot_parcours_1.avi')\n",
+    "fps = cap.get(cv.CAP_PROP_FPS) # store fps for the video that we have to make\n",
     "frames = [] # creating a list for all consecutive frames\n",
     "\n",
     "while(cap.isOpened()):\n",
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1276ac550>"
+       "<matplotlib.image.AxesImage at 0x153aaf0a0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1275b8970>"
+       "<matplotlib.image.AxesImage at 0x153b2eb50>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -224,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x127616a00>"
+       "<matplotlib.image.AxesImage at 0x153c4b100>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,16 +303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x127934a90>"
+       "<matplotlib.image.AxesImage at 0x12c4e0460>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -649,7 +650,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12e998a90>"
+       "<matplotlib.image.AxesImage at 0x1307eda60>"
       ]
      },
      "execution_count": 22,
@@ -686,9 +687,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "import keras\n",
@@ -951,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,9 +1040,7 @@
     "        closest_char = char_vals[np.argmin(distances)]\n",
     "        if (not char_sequence) or (char_sequence[-1] != closest_char):\n",
     "            char_sequence += closest_char\n",
-    "            char_sequence_list.append(char_sequence)\n",
-    "    else: # The arrow is too far away from any character\n",
-    "        char_sequence_list.append(char_sequence)"
+    "    char_sequence_list.append(char_sequence)"
    ]
   },
   {
@@ -1045,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1064,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Re-making the video (TO-DO)"
+    "# 6. Re-making the video"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames_newvid = []\n",
+    "position = (30, 450)\n",
+    "\n",
+    "for i in range(len(frames)):\n",
+    "    frame = frames[i].copy()\n",
+    "    formula = char_sequence_list[i]\n",
+    "    #if formula[-1] == '=':\n",
+    "    #    formula += str(result)\n",
+    "    \n",
+    "    frame_newvid = cv.putText(frame,\n",
+    "                              'Formula: '+formula,\n",
+    "                              position, \n",
+    "                              cv.FONT_HERSHEY_SIMPLEX,\n",
+    "                              1, # font size\n",
+    "                              (0, 80, 280, 255),\n",
+    "                              2) # thickness\n",
+    "\n",
+    "    for j in range(i-3):\n",
+    "        location_1 = (arrow_locations[j][1], arrow_locations[j][0])\n",
+    "        location_2 = (arrow_locations[j+1][1], arrow_locations[j+1][0])\n",
+    "        cv.line(frame_newvid, location_1, location_2, [0, 80, 280, 255], 5) \n",
+    "    \n",
+    "    frames_newvid.append(cv.cvtColor(frame_newvid, cv.COLOR_BGR2RGB))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "video_name = 'video.avi' # Remove the video each time after modifying the code because the output file will still be the old one (I think)\n",
+    "\n",
+    "video = cv.VideoWriter(video_name, 0, fps, (im_w, im_h))\n",
+    "\n",
+    "for frame_newvid in frames_newvid:\n",
+    "    video.write(frame_newvid)\n",
+    "\n",
+    "cv.destroyAllWindows()\n",
+    "video.release()"
    ]
   },
   {
@@ -1067,7 +1122,7 @@
     "# 7. Planning\n",
     "- finish classification: for digits (TO-DO) as well as operators (DONE)\n",
     "- finish tracing the formula (DONE)\n",
-    "- re-make the video (TO-DO, Tuesday)\n",
+    "- re-make the video (DONE, but we can make it look a bit nicer if we still have time afterwards)\n",
     "- write the code to python files (and refine all parameters for masks etc.) (TO-DO, Wednesday)\n",
     "- think about the bonus video (TO-DO, Thursday)"
    ]
